--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "7.7.0",
     "@vercel/analytics": "1.0.2",
     "next": "13.5.1",
     "react": "18.2.0",
@@ -18,14 +19,14 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "tailwindcss": "3.3.3",
-    "postcss": "8.4.30",
     "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.5.1",
+    "postcss": "8.4.30",
+    "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
 }
