--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +13,7 @@
     "@sendgrid/mail": "7.7.0",
     "@vercel/analytics": "1.0.2",
     "next": "13.5.1",
+    "next-sitemap": "4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
