--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@sendgrid/mail": "8.1.0",
@@ -28,6 +29,8 @@
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "postcss": "8.4.32",
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "0.5.9",
     "tailwindcss": "3.3.6",
     "typescript": "5.3.3"
   }
