--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "8.1.0",
-    "@vercel/analytics": "1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "next": "14.0.4",
     "next-sitemap": "4.2.3",
     "react": "18.2.0",
@@ -22,16 +22,16 @@
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@types/node": "20.10.4",
-    "@types/react": "18.2.43",
-    "@types/react-dom": "18.2.17",
+    "@types/node": "20.10.6",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
-    "eslint": "8.55.0",
+    "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
-    "postcss": "8.4.32",
+    "postcss": "8.4.33",
     "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.9",
-    "tailwindcss": "3.3.6",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
 }
