--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prettier --write . && next build",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@sendgrid/mail": "8.1.0",
-    "@vercel/speed-insights": "^1.0.2",
-    "next": "14.0.4",
+    "@sendgrid/mail": "8.1.1",
+    "@vercel/speed-insights": "1.0.10",
+    "next": "14.1.4",
     "next-sitemap": "4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -22,16 +22,16 @@
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "8.4.33",
-    "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.11",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.70",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.12",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.4.3"
   }
 }
