--- a/package.json
+++ b/package.json
@@ -7,28 +7,38 @@
     "build": "prettier --write . && next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "eslint:format": "eslint . --fix",
+    "prettier:format": "prettier --write .",
+    "prettier:check": "prettier --check ."
   },
   "dependencies": {
     "@sendgrid/mail": "8.1.3",
-    "@vercel/speed-insights": "1.0.10",
-    "next": "14.2.3",
-    "next-intl": "3.14.0",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "1.0.12",
+    "next": "14.2.5",
+    "next-intl": "3.17.2",
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
+    "@types/node": "22.3.0",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
+    "@typescript-eslint/eslint-plugin": "8.1.0",
+    "@typescript-eslint/parser": "8.1.0",
+    "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "8.4.38",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.14",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.3"
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import-helpers": "1.3.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "postcss": "8.4.41",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4"
   }
 }
