--- a/package.json
+++ b/package.json
@@ -12,33 +12,46 @@
     "prettier:check": "prettier --check ."
   },
   "dependencies": {
+    "@hookform/resolvers": "3.9.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-slot": "1.1.0",
     "@sendgrid/mail": "8.1.3",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.12",
-    "next": "14.2.5",
-    "next-intl": "3.17.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.445.0",
+    "next": "14.2.13",
+    "next-intl": "3.19.4",
     "next-themes": "0.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.53.0",
+    "server-only": "0.0.1",
+    "sonner": "1.5.0",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.3.0",
-    "@types/react": "18.3.3",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.1.0",
-    "@typescript-eslint/parser": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "8.6.0",
+    "@typescript-eslint/parser": "8.6.0",
     "autoprefixer": "10.4.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import-helpers": "1.3.1",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react": "7.36.1",
     "eslint-plugin-react-hooks": "4.6.2",
-    "postcss": "8.4.41",
+    "postcss": "8.4.47",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "tailwindcss": "3.4.10",
-    "typescript": "5.5.4"
+    "tailwindcss": "3.4.13",
+    "typescript": "5.6.2"
   }
 }
