Refactor ESLint configuration to restrict imports from next/link and next/navigation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,8 +32,19 @@
         }
       }
     ],
+    "no-restricted-imports": [
+      "error",
+      {
+        "name": "next/link",
+        "message": "Please import from `@/i18n/routing` instead."
+      },
+      {
+        "name": "next/navigation",
+        "importNames": ["redirect", "permanentRedirect", "useRouter", "usePathname"],
+        "message": "Please import from `@/i18n/routing` instead."
+      }
+    ],
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-require-imports": "warn",
     "react/react-in-jsx-scope": "off",
