--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prettier --write . && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "eslint:format": "eslint . --fix",
@@ -14,43 +14,45 @@
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
     "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-select": "2.1.2",
     "@radix-ui/react-slot": "1.1.0",
     "@sendgrid/mail": "8.1.3",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.12",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "lucide-react": "0.445.0",
-    "next": "14.2.13",
-    "next-intl": "3.19.4",
+    "embla-carousel-react": "8.3.0",
+    "lucide-react": "0.447.0",
+    "next": "14.2.14",
+    "next-intl": "3.20.0",
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
     "server-only": "0.0.1",
     "sonner": "1.5.0",
-    "tailwind-merge": "2.5.2",
+    "tailwind-merge": "2.5.3",
     "tailwindcss-animate": "1.0.7",
+    "vaul": "1.0.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.5.5",
-    "@types/react": "18.3.8",
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.6.0",
-    "@typescript-eslint/parser": "8.6.0",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import-helpers": "1.3.1",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "7.36.1",
+    "eslint-plugin-react": "7.37.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "postcss": "8.4.47",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
+    "prettier-plugin-tailwindcss": "0.6.8",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
   }
